--- a/src/components/Column.astro
+++ b/src/components/Column.astro
@@ -1,7 +1,9 @@
 ---
+import type { VerticalAlignments } from "@lib/types";
+
 export type Props = {
 	ratio: number;
-	verticalAlignment: "top" | "middle" | "bottom";
+	verticalAlignment: VerticalAlignments;
 	index: number;
 };
 
