--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,5 +1,6 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+import type { HTMLAttributes } from "astro/types";
+
 interface Props extends HTMLAttributes<"a"> {
 	href?: string;
 };
@@ -13,13 +14,10 @@ const {
 } = Astro.props;
 ---
 
-{href
-	? (
-		<a class={className} href={href} target={href.startsWith("http") && "_blank"} rel={href.startsWith("http") && "noindex nofollow"} title={title} role={role} {...rest}>
-			<slot />
-		</a>
-	)
-	: (
+{href && (
+	<a class={className} href={href} target={href.startsWith("http") && "_blank"} rel={href.startsWith("http") && "noindex nofollow"} title={title} role={role} {...rest}>
 		<slot />
-	)
-}
+	</a>
+) || (
+	<slot />
+)}
