--- a/src/components/ProjectGrouping.astro
+++ b/src/components/ProjectGrouping.astro
@@ -89,7 +89,7 @@ const resolvedSource = keys ? keys : Object.keys(source);
 						)}
 					</div>
 					<div class="record-image">
-						<Image source={project.image} />
+						<Image source={project.image} sizes="(min-width: 1281px) 30vw, (max-width: 640px) 100vw, (max-width: 1024px) 50vw, (max-width: 1280px) 40vw" />
 					</div>
 				</article>
 			);
