--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -125,7 +125,7 @@ const {
 	}
 	@media (max-width: 640px) {
 		#header-inner {
-			justify-content: center;
+			justify-content: flex-end;
 		}
 		#header-expand {
 			all: unset;
