--- a/src/components/PortableTextCmps/PortableTextTitle.astro
+++ b/src/components/PortableTextCmps/PortableTextTitle.astro
@@ -32,6 +32,7 @@ const { node } = Astro.props;
 </>)}
 
 <style lang="scss">
+	@use "@styles/mixins";
 	.document-title-baseline {
 		font-weight: var(--font-weight-bold);
 	}
@@ -59,16 +60,6 @@ const { node } = Astro.props;
 		margin: 0;
 	}
 	.document-tags .tag {
-		display: block;
-		padding-block: 0.1875rem;
-		padding-inline: 0.5625rem;
-		border-radius: 9999px;
-		border: 1px solid var(--color-3);
-		transition: background-color 0.125s;
-		@media (any-hover: hover) {
-			&:hover {
-				background-color: var(--color-6);
-			}
-		}
+		@include mixins.tag($hover: true);
 	}
 </style>
