--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,8 +2,8 @@
 
 :root {
 	// color
-	--color-1: #191f45; // darkest // #191f45
-	--color-2: #5f6368; // dark
+	--color-1: #000000; // darkest // #191f45
+	--color-2: #5f6368; // dark // #5f6368
 	--color-3: #94979b; // medium-dark
 	--color-4: #dadce0; // medium
 	--color-5: #e8e9eb; // medium-light
@@ -18,9 +18,10 @@
 	--font-weight-medium: 400;
 	--font-weight-light: 300;
 	// font-size
-	--font-size-large: 1rem; // 18px
-	--font-size-medium: 0.8888888889rem; // 16px
-	--font-size-small: 0.7777777778rem; // 14px
+	--font-size-x-large: 1.2222222222rem; // 22px @ 18px
+	--font-size-large: 1rem; // 18px @ 18px
+	--font-size-medium: 0.8888888889rem; // 16px @ 18px
+	--font-size-small: 0.7777777778rem; // 14px @ 18px
 	// line-height
 	--line-height-large: 1.3;
 	--line-height-medium: 1.15;
