--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,7 +7,7 @@ body {
 	left: 0;
 	width: 100%;
 	min-height: 100%;
-	font-size: 18px;
+	font-size: max(18px, 100%);
 	font-family: var(--font-family-sans);
 	font-weight: var(--font-weight-medium);
 	font-style: normal;
